tune xgb, save model

--- a/code/Binary_Classification.ipynb
+++ b/code/Binary_Classification.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from PIL import Image\n",
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +60,7 @@
        "12976"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,101 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      " This problem is unconstrained.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RUNNING THE L-BFGS-B CODE\n",
-      "\n",
-      "           * * *\n",
-      "\n",
-      "Machine precision = 2.220D-16\n",
-      " N =         2501     M =           10\n",
-      "\n",
-      "At X0         0 variables are exactly at the bounds\n",
-      "\n",
-      "At iterate    0    f=  6.29586D+03    |proj g|=  4.91114D+02\n",
-      "\n",
-      "At iterate   50    f=  5.01651D+03    |proj g|=  3.22159D+01\n",
-      "\n",
-      "At iterate  100    f=  4.81408D+03    |proj g|=  2.97305D+01\n",
-      "\n",
-      "At iterate  150    f=  4.68747D+03    |proj g|=  2.19654D+01\n",
-      "\n",
-      "At iterate  200    f=  4.61583D+03    |proj g|=  1.38268D+01\n",
-      "\n",
-      "At iterate  250    f=  4.57118D+03    |proj g|=  1.44663D+01\n",
-      "\n",
-      "At iterate  300    f=  4.54165D+03    |proj g|=  1.34950D+01\n",
-      "\n",
-      "At iterate  350    f=  4.52254D+03    |proj g|=  1.45914D+01\n",
-      "\n",
-      "At iterate  400    f=  4.51412D+03    |proj g|=  2.84638D+00\n",
-      "\n",
-      "At iterate  450    f=  4.50791D+03    |proj g|=  3.33854D+00\n",
-      "\n",
-      "At iterate  500    f=  4.50468D+03    |proj g|=  1.09227D+01\n",
-      "\n",
-      "At iterate  550    f=  4.50287D+03    |proj g|=  2.49857D+00\n",
-      "\n",
-      "At iterate  600    f=  4.50197D+03    |proj g|=  1.35207D+00\n",
-      "\n",
-      "At iterate  650    f=  4.50104D+03    |proj g|=  1.99215D+00\n",
-      "\n",
-      "At iterate  700    f=  4.50075D+03    |proj g|=  8.91277D-01\n",
-      "\n",
-      "At iterate  750    f=  4.50053D+03    |proj g|=  7.40236D-01\n",
-      "\n",
-      "At iterate  800    f=  4.50040D+03    |proj g|=  4.77190D-01\n",
-      "\n",
-      "At iterate  850    f=  4.50029D+03    |proj g|=  5.75154D-01\n",
-      "\n",
-      "At iterate  900    f=  4.50021D+03    |proj g|=  7.13493D-01\n",
-      "\n",
-      "At iterate  950    f=  4.50015D+03    |proj g|=  4.61077D-01\n",
-      "\n",
-      "At iterate 1000    f=  4.50012D+03    |proj g|=  1.65580D-01\n",
-      "\n",
-      "At iterate 1050    f=  4.50011D+03    |proj g|=  1.24693D-01\n",
-      "\n",
-      "           * * *\n",
-      "\n",
-      "Tit   = total number of iterations\n",
-      "Tnf   = total number of function evaluations\n",
-      "Tnint = total number of segments explored during Cauchy searches\n",
-      "Skip  = number of BFGS updates skipped\n",
-      "Nact  = number of active bounds at final generalized Cauchy point\n",
-      "Projg = norm of the final projected gradient\n",
-      "F     = final function value\n",
-      "\n",
-      "           * * *\n",
-      "\n",
-      "   N    Tit     Tnf  Tnint  Skip  Nact     Projg        F\n",
-      " 2501   1064   1207      1     0     0   1.205D-01   4.500D+03\n",
-      "  F =   4500.1071046550578     \n",
-      "\n",
-      "CONVERGENCE: REL_REDUCTION_OF_F_<=_FACTR*EPSMCH             \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    9.3s finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create Logisitc Model\n",
     "log_model = LogisticRegression(\n",
@@ -1013,6 +922,84 @@
    "source": [
     "print(f\"Best Score: {best_xgb_random_result.best_score_:0.2f}\")\n",
     "best_xgb_random_result.best_params_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create GBM estimator with best params\n",
+    "tunned_xgb_model = xgb.XGBClassifier(\n",
+    "    learning_rate=0.031211714406977634,\n",
+    "    max_depth=6,\n",
+    "    min_child_weight=3,\n",
+    "    subsample=1,\n",
+    "    colsample_bytree=1,\n",
+    "    colsample_bynode=0.75,\n",
+    "    colsample_bylevel=1,\n",
+    ")\n",
+    "\n",
+    "# search with 10 random samples\n",
+    "tunned_xgb_random_search = RandomizedSearchCV(\n",
+    "    tunned_xgb_model,\n",
+    "    param_distributions={\n",
+    "        \"n_estimators\": range(1000, 5000),\n",
+    "    },\n",
+    "    cv=5,\n",
+    "    n_iter=10,\n",
+    "    n_jobs=-1,\n",
+    "    verbose=3,\n",
+    "    scoring=\"accuracy\",\n",
+    ")\n",
+    "\n",
+    "# train\n",
+    "tunned_xgb_random_result = tunned_xgb_random_search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Score: 0.760\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'n_estimators': 3008}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(f\"Best Score: {tunned_xgb_random_result.best_score_:0.3f}\")\n",
+    "tunned_xgb_random_result.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('tunned_xgb_random_result.pickle', 'wb') as file:\n",
+    "    pickle.dump(tunned_xgb_random_result, file)"
    ]
   }
  ],
