--- a/code/Binary_Classification.ipynb
+++ b/code/Binary_Classification.ipynb
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -983,23 +983,18 @@
        "{'n_estimators': 3008}"
       ]
      },
+     "execution_count": 16,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# save the last best XGB model\n",
+    "with open('tunned_xgb_random_result.pickle', 'wb') as file:\n",
+    "    pickle.dump(tunned_xgb_random_result, file)\n",
+    "\n",
     "print(f\"Best Score: {tunned_xgb_random_result.best_score_:0.3f}\")\n",
     "tunned_xgb_random_result.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('tunned_xgb_random_result.pickle', 'wb') as file:\n",
-    "    pickle.dump(tunned_xgb_random_result, file)"
    ]
   }
  ],
