add read the pickled model

--- a/code/Binary_Classification.ipynb
+++ b/code/Binary_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "12976"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,6 +995,27 @@
     "\n",
     "print(f\"Best Score: {tunned_xgb_random_result.best_score_:0.3f}\")\n",
     "tunned_xgb_random_result.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Score: 0.930\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load model\n",
+    "with open('./tunned_xgb_random_result.pickle', 'rb') as file:\n",
+    "    model: RandomizedSearchCV = pickle.load(file)\n",
+    "\n",
+    "print(f\"Best Score: {model.score(X_test, y_test):0.3f}\")"
    ]
   }
  ],
