predict a single image

--- a/code/CNN.ipynb
+++ b/code/CNN.ipynb
@@ -25,7 +25,7 @@
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "\n",
-    "from utils import load_all_images_3channel, get_class_name\n",
+    "from utils import load_all_images_3channel, get_class_name, predict_image_3c\n",
     "\n",
     "PIXELS = 200"
    ]
@@ -297,34 +297,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save or Load Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# comment one line to save or loaod model\n",
+    "\n",
+    "# model.save('CNN')\n",
+    "loaded_model = keras.models.load_model(\"./CNN\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predict a single image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 4 of 4). These functions will not be directly callable after loading.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: CNN.tf/assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: CNN.tf/assets\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>prob</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sd</td>\n",
+       "      <td>87.400002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>s</td>\n",
+       "      <td>7.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>we</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vd</td>\n",
+       "      <td>1.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>fdw</td>\n",
+       "      <td>0.200000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  class       prob\n",
+       "1    sd  87.400002\n",
+       "0     s   7.200000\n",
+       "3    we   3.000000\n",
+       "2    vd   1.500000\n",
+       "4   fdw   0.200000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.save('CNN.tf')"
+    "prob = predict_image_3c(loaded_model, \"../data/test_img.jpeg\", pixels=PIXELS)\n",
+    "\n",
+    "pd.DataFrame({\n",
+    "    'class': ['s', 'sd', 'vd', 'we', 'fdw'],\n",
+    "    'prob': np.round(prob * 100, 1).flatten()\n",
+    "}).sort_values('prob', ascending=False)"
    ]
   }
  ],
