use correct class names

--- a/code/CNN.ipynb
+++ b/code/CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,14 @@
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "\n",
-    "from utils import load_all_images_3channel, get_class_name, predict_image_3c\n",
+    "from utils import (\n",
+    "    load_all_images_3channel,\n",
+    "    get_class_name,\n",
+    "    predict_image_3c,\n",
+    "    CLASSES,\n",
+    ")\n",
     "\n",
-    "PIXELS = 200"
+    "PIXELS = 200\n"
    ]
   },
   {
@@ -324,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -355,27 +360,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>sd</td>\n",
+       "      <td>cloudy</td>\n",
        "      <td>87.400002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>s</td>\n",
+       "      <td>sunny</td>\n",
        "      <td>7.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>we</td>\n",
+       "      <td>rainy</td>\n",
        "      <td>3.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>vd</td>\n",
+       "      <td>foggy</td>\n",
        "      <td>1.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>fdw</td>\n",
+       "      <td>snowy</td>\n",
        "      <td>0.200000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -383,15 +388,15 @@
        "</div>"
       ],
       "text/plain": [
-       "  class       prob\n",
-       "1    sd  87.400002\n",
-       "0     s   7.200000\n",
-       "3    we   3.000000\n",
-       "2    vd   1.500000\n",
-       "4   fdw   0.200000"
+       "    class       prob\n",
+       "1  cloudy  87.400002\n",
+       "0   sunny   7.200000\n",
+       "3   rainy   3.000000\n",
+       "2   foggy   1.500000\n",
+       "4   snowy   0.200000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +405,7 @@
     "prob = predict_image_3c(loaded_model, \"../data/test_img.jpeg\", pixels=PIXELS)\n",
     "\n",
     "pd.DataFrame({\n",
-    "    'class': ['s', 'sd', 'vd', 'we', 'fdw'],\n",
+    "    'class': CLASSES.keys(),\n",
     "    'prob': np.round(prob * 100, 1).flatten()\n",
     "}).sort_values('prob', ascending=False)"
    ]
