add all notebooks

--- a/code/DL.ipynb
+++ b/code/DL.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Basic DL\"\n",
+    "format: \n",
+    "  html:\n",
+    "    code-fold: true\n",
+    "jupyter: python3\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
