--- a/code/CNN.ipynb
+++ b/code/CNN.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -378,34 +378,28 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>class</th>\n",
        "      <th>prob</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>cloudy</td>\n",
+       "      <th>cloudy</th>\n",
        "      <td>90.199997</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>rainy</td>\n",
+       "      <th>rainy</th>\n",
        "      <td>3.400000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sunny</td>\n",
+       "      <th>sunny</th>\n",
        "      <td>3.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>snowy</td>\n",
+       "      <th>snowy</th>\n",
        "      <td>0.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>foggy</td>\n",
+       "      <th>foggy</th>\n",
        "      <td>0.400000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -413,27 +407,29 @@
        "</div>"
       ],
       "text/plain": [
-       "    class       prob\n",
-       "1  cloudy  90.199997\n",
-       "3   rainy   3.400000\n",
-       "0   sunny   3.200000\n",
-       "4   snowy   0.500000\n",
-       "2   foggy   0.400000"
+       "             prob\n",
+       "cloudy  90.199997\n",
+       "rainy    3.400000\n",
+       "sunny    3.200000\n",
+       "snowy    0.500000\n",
+       "foggy    0.400000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prob = predict_image_3c(loaded_model, \"../data/test_img3.jpeg\", pixels=PIXELS, show=True)\n",
+    "prob = predict_image_3c(\n",
+    "    loaded_model, \"../data/test_img3.jpeg\", pixels=PIXELS, show=True\n",
+    ")\n",
     "plt.show()\n",
     "\n",
-    "pd.DataFrame({\n",
-    "    'class': CLASSES.keys(),\n",
-    "    'prob': np.round(prob * 100, 1).flatten()\n",
-    "}).sort_values('prob', ascending=False)"
+    "pd.DataFrame(\n",
+    "    {\"prob\": np.round(prob * 100, 1).flatten()},\n",
+    "    index=CLASSES.keys(),\n",
+    ").sort_values(\"prob\", ascending=False)\n"
    ]
   }
  ],
