--- a/code/CNN.ipynb
+++ b/code/CNN.ipynb
@@ -315,9 +315,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M1\n",
+      "\n",
+      "systemMemory: 16.00 GB\n",
+      "maxCacheSize: 5.33 GB\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-23 09:59:59.161478: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2022-08-23 09:59:59.161583: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    }
+   ],
    "source": [
     "# comment one line to save or loaod model\n",
     "\n",
@@ -334,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -351,11 +371,63 @@
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prob</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>cloudy</th>\n",
+       "      <td>90.199997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rainy</th>\n",
+       "      <td>3.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sunny</th>\n",
+       "      <td>3.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>snowy</th>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>foggy</th>\n",
+       "      <td>0.400000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[array([ 3.2, 90.2,  0.4,  3.4,  0.5], dtype=float32)]"
+       "             prob\n",
+       "cloudy  90.199997\n",
+       "rainy    3.400000\n",
+       "sunny    3.200000\n",
+       "snowy    0.500000\n",
+       "foggy    0.400000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,8 +441,7 @@
     "pd.DataFrame(\n",
     "    {\"prob\": np.round(prob * 100, 1).flatten()},\n",
     "    index=CLASSES.keys(),\n",
-    ").sort_values(\"prob\", ascending=False)\n",
-    "np.round(prob * 100, 1)\n"
+    ").sort_values(\"prob\", ascending=False)"
    ]
   }
  ],
